# gib-package-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  db.env  docker-compose.yml  start.fish  start.sh
client/: Cargo.toml
client/src/: cli.yaml  client_config.rs  main.rs
client/tmp/example_package/: package.toml
example_package/: package.toml
gib-client/: Cargo.toml
gib-client/src/: main.rs
gib-common/: Cargo.toml
gib-common/src/: config.rs  util.rs
gib-server/: Cargo.toml  build.sh  diesel.toml
gib-server/migrations/2021-02-02-030226_create_schema/: down.sql
gib-server/migrations/2021-02-08-064121_github_users/: down.sql  up.sql
gib-server/src/: login.rs  main.rs  pkg.rs
gib-server/src/db/: mod.rs  models.rs  schema.rs
gib-server/src/front_end/: index.rs
gib-web/: Cargo.toml  package.json  rollup.config.js
gib-web/js/: index.ts
gib-web/src/: index.rs  lib.rs
gib-web/src/compoents/: header.rs
gib-web/src/components/: header.rs
gib-web/static/: index.css  index.html
gib-web/static/.templates/: index.html
gib-web/static/account/: login.html
gib-web/style/: header.scss  main.scss
server/: .env  Cargo.toml  cert.pem  key.pem
server/migrations/2021-02-02-030226_create_schema/: up.sql
server/migrations/2021-02-02-030229_create_tables/: down.sql  up.sql
server/src/: config.rs  main.rs  pkg.rs
server/src/db/: mod.rs  models.rs
