[package]
name = "client"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
futures = "0.3.12"

[dependencies.tokio]
version = "1.0.2"
features = ["full"]