[package]
name = "gib-web"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.70"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Storage"
]


[dependencies.gib-common]
path = "../gib-common"