[package]
name = "server"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
env_logger = "0.8.2"
log = "0.4.13"
actix-web-middleware-redirect-scheme = "3.0"
actix-multipart = "0.3"
futures = "0.3.12"
sanitize-filename = "0.3.0"
tar = "0.4.32"
flate2 = "1.0.20"
toml = "0.5"
regex = "1.4.3"

[dependencies.actix-web]
version = "3"
features = ["openssl"]

[dependencies.openssl]
version = "0.10.32"
features = ["v110"]

[dependencies.serde]
version = "1.0.119"
features = ["derive"]
